<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/menu_1"
        android:icon="@drawable/baseline_home_repair_service_24"
        />

    <item
        android:id="@+id/chats"
        android:title="@string/Chats"
        android:icon="@drawable/rounded_chat_bubble_24"
        />
    <item
        android:id="@+id/create"
        android:title="@string/create"
        android:icon="@drawable/rounded_add_24"
        />
    <item
        android:id="@+id/notif"
        android:title="@string/menu_2"
        android:icon="@drawable/rounded_notifications_24"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/menu_3"
        android:icon="@drawable/rounded_person_24"
        />




</menu>